force-app/main/default/objects/stripeGC__Sync_Log__c/fields/stripeGC__Dump__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Dump__c</fullName>
    <label>Dump</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>