force-app/main/default/objects/stripeGC__Sync_Log__c/fields/stripeGC__Error_Details__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Error_Details__c</fullName>
    <label>Error Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>