force-app/main/default/objects/stripeGC__Sync_Log__c/listViews/stripeGC__All.listView-meta.xml
<ListView>
    <fullName>stripeGC__All</fullName>
    <columns>NAME</columns>
    <columns>stripeGC__Action_Taken__c</columns>
    <columns>stripeGC__Error_Details__c</columns>
    <columns>stripeGC__Message__c</columns>
    <columns>stripeGC__Dump__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>